--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,3 @@
-# Environment variables
-.env
-.env.local
-.env*.local
-*.env
-
 # Python
 __pycache__/
 *.py[cod]
@@ -16,7 +10,7 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+backend/lib/
 lib64/
 parts/
 sdist/
@@ -25,10 +19,9 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+# Venvs for python
 venv/
 env/
-ENV/
-.venv
 
 # Node.js
 node_modules/
@@ -44,6 +37,9 @@ pnpm-lock.yaml
 .next/
 out/
 .swc/
+
+# Frontend specific overrides
+!frontend/src/lib/
 
 # Testing
 coverage/
